# AIDISTRO_different

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  CONTRIBUTING.md  Dockerfile  LICENSE  QUICKSTART.md  README.md  ROADMAP.md  benchmark.py  benchmark2.py  benchmark_mem.py  benchmark_mem2.py  dummy_index.db  entrypoint.sh  install.sh  patch_memory.py  requirements.txt  run_distro.sh  test_memory.db
.jules/: bolt.md
configs/: agent.json  voice.json
docs/: AUNT_USABILITY_ROADMAP.md  CODEX_HANDOFF_NOW.md  CONTEXT.md  EVERYTHING_FEATURE_MATRIX.md  EXECUTION_OUTLINE.md  INSTALLER.md  MNEMONICOS_PORT_PLAN.md  MNEMONIC_AI_HANDOFF.md  PLUGIN_MANIFEST.md  PROJECT_BRIEF.md  REPO_DOCUMENTATION.md  RUNTIME_ENV.md  SESSION_CHECKPOINT_2026-02-22.md  SKILLS.md  VOICE_UX.md
docs/site/: index.html
iso/: .gitignore  build-iso.sh  grub.cfg
legacy/mnemonicos_prototype/: package-lock.json  package.json
src/rust/: Cargo.toml
src/rust/ai-distro-hud/: Cargo.toml
src/rust/ai-distro-hud/src/: main.rs
src/ui/: dashboard.py  dashboard_vanilla.py  index.html
tests/: integration_tests.py  smoke_test.sh  test_iso_vm.sh
tools/agent/: accessibility.py  agent_identity_tool.py  atspi_hands.py  automation_recipes.py  autonomous_identity_tool.py  autonomous_script_tool.py  bayesian_engine.py  bluetooth_audio.py  brain.py  calendar_router.py  calendar_tool.py  context_router.py  conversation_memory.py  crash_reporter.py  curator.py  dashboard.py  day_planner.py  download_model.py  email_imap_tool.py  email_router.py  encrypted_db.py  event_bus.py  family_messenger.py  (+39 more)
(+111 files in other folders)
