[package]
name = "ai-distro-hud"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.34.1"
futures-util = "0.3.32"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.1", features = ["rt-multi-thread", "macros"] }
tokio-tungstenite = "0.29.0"
